HUDF-1208: notification overlay - fixed cut off of long notification msgs @clnielsen

--- a/FJSHUD/app/styles/popups.less
+++ b/FJSHUD/app/styles/popups.less
@@ -141,10 +141,6 @@
                 padding-bottom: 20px;
             }
         }
-
-        .NotificationMessage{
-          max-height: 35px !important;
-        } 
     }
     
     
